<resources>
    <string name="app_name">Окна Сервис</string>
    <string name="window_width_placeholder">Ширина окна: %1$d мм</string>
    <string name="window_height_placeholder">Высота окна: %1$d мм</string>
    <string name="sash_fixed">Глухая</string>
    <string name="sash_swing_out">Поворотная</string>
    <string name="sash_swing_out_and_flap">Поворотно-откидная</string>
    <string name="sash_type_placeholder">Тип %1$d-й створки:</string>
    <string name="budget">Бюджет</string>
    <string name="budget_description">Reachmont ECO 60мм, фурнитура VORNE</string>
    <string name="optimum">Оптимум</string>
    <string name="optimum_description">Rehau THERMO 60мм, фурнитура Roto</string>
    <string name="premium">Премиум</string>
    <string name="premium_description">Rehau DELIGHT-DESIGN 70мм, фурнитура Roto</string>
    <string name="material">Профильная система:</string>
    <string name="choose_material">Выберите профильную систему:</string>
    <string name="glass_unit">Стеклопакет:</string>
    <string name="single_chamber">Однокамерный</string>
    <string name="double_chamber">Двухкамерный</string>
    <string name="house_type">Тип дома:</string>
    <string name="prefab">Панельный</string>
    <string name="brick">Кирпичный</string>
    <string name="options">Опции:</string>
    <string name="windowsill">Подоконник</string>
    <string name="ebb">Отлив</string>
    <string name="slope">Откос</string>
    <string name="lamination">Ламинация</string>
    <string name="mosquito_net">Москитная сетка</string>
    <string name="additional_services">Дополнительные услуги:</string>
    <string name="installation">Установка</string>
    <string name="delivery">Доставка</string>
    <string name="number_of_sashes">Количество створок</string>
    <string name="sashes">Створки:</string>
    <string name="window_sizes">Размеры окна:</string>
    <string name="add_to_cart">Добавить в корзину</string>
    <string name="calculator">Калькулятор</string>
    <string name="cart">Корзина</string>
    <string name="specify_window_dimensions">Укажите размеры окна</string>
    <string name="width">Ширина</string>
    <string name="mm">мм</string>
    <string name="height">Высота</string>
    <string name="measure_using_ar">Замерить через AR</string>
    <string name="next">Далее</string>
    <string name="specify_params">Укажите параметры</string>
    <string name="one_sash_window">Одностворчатое</string>
    <string name="two_sashes_window">Двухстворчатое</string>
    <string name="three_sashes_window">Трехстворчатое</string>
    <string name="window_type">Тип окна:</string>
    <string name="approximate_price">Приблизительная стоимость:</string>
    <string name="ruble_placeholder">%1$d ₽</string>
    <string name="width_height_placeholder">Ширина: %1$d мм, высота: %2$d мм</string>
    <string name="material_type_placeholder">Профильная система: %1$s</string>
    <string name="window_type_placeholder">%1$s окно</string>
    <string name="sashes_placeholder">Створки (слева направо): %1$s</string>
    <string name="glass_unit_type_placeholder">Стеклопакет: %1$s</string>
    <string name="house_type_placeholder">Тип дома: %1$s</string>
    <string name="options_placeholder">Опции: %1$s</string>
    <string name="absent">Отсутствуют</string>
    <string name="delete">Удалить</string>
    <string name="create_order_placeholder">Заказать за %1$d ₽</string>
    <string name="cart_is_empty">Корзина пуста</string>
    <string name="create_window_in_calculator">Соберите окна в калькуляторе</string>
    <string name="go_to_calculator">Перейти в калькулятор</string>
    <string name="edit">Редакитировать</string>
    <string name="change">Изменить</string>
    <string name="save">Сохранить</string>
    <string name="calculating_price">Считаем цену</string>
    <string name="unable_to_calculate_price">Не удалось рассчитать цену</string>
    <string name="pick_address">Выберите адрес</string>
    <string name="delivery_address">Адрес доставки</string>
    <string name="pickup_address">Адрес самовывоза</string>
    <string name="select">Выбрать</string>
    <string name="login">Вход</string>
    <string name="phone_number">Номер телефона</string>
    <string name="sms_code">Код из SMS</string>
    <string name="confirm">Подтвердить</string>
    <string name="name">Имя</string>
    <string name="email">E-mail</string>
    <string name="registration">Регистрация</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="error_has_occurred">Произошла ошибка</string>
    <string name="repeat">Повторить</string>
    <string name="point_top_left_corner">Указать левый верхний угол</string>
    <string name="point_top_right_corner">Указать правый верхний угол</string>
    <string name="point_bottom_right_corner">Указать правый нижний угол</string>
    <string name="remove_previous_point">Удалить предыдущую отметку</string>
    <string name="measurment_using_ar">Замер через AR</string>
    <string name="got_it">Понятно</string>
    <string name="tutorial">Обучение</string>
    <string name="ar_tutorial_text">1. Убедитесь, что в помещении обеспечена достаточная освещенность.\n2. Осмотрите через камеру помещение, пока на экране не появится красный шарик-указатель.\n3. Наведите его на угол окна.\n4. После того, как шарик расположится в углу окна, нажмите кнопку \"Отметить\". При этом шарик окрасится в зеленый. Если не удается расположить указатель в нужном месте, осмотрите помещение через камеру еще раз, а также убедитесь в достаточности освещения.\n5. Аналогичным образом отметьте остальные 3 угла.\n6. При необходимости, сделанную отметку можно убрать с помощью соответствующей кнопки.\n7. После того, как 4 угла окна будут отмечены, нажмите кнопку \"Продолжить\".</string>
    <string name="profile">Профиль</string>
    <string name="plus_placeholder">+%1$s</string>
    <string name="my_orders">Мои заказы:</string>
    <string name="number_placeholder">№%1$d</string>
    <string name="order_number_placeholder">Заказ №%1$d</string>
    <string name="created">Создан</string>
    <string name="prepaid">Предоплачен</string>
    <string name="in_work">В работе</string>
    <string name="done">Выполнен</string>
    <string name="logout">Выйти</string>
    <string name="delivery_to_address_placeholder">Доставка по адресу: %1$s</string>
    <string name="pickup_at_placeholder">Самовывоз по адресу: %1$s</string>
    <string name="pay">Оплатить</string>
    <string name="prepay">Внести предоплату</string>
    <string name="price">Стоимость</string>
    <string name="mark">Отметить</string>
    <string name="remove">Убрать</string>
    <string name="contacts">Контакты</string>
    <string name="call">Позвонить</string>
    <string name="open_on_map">Открыть на карте</string>
    <string name="point_window_corners">Отметьте углы окна</string>
</resources>