<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/padding_medium"
    android:paddingEnd="@dimen/padding_medium"
    android:paddingTop="@dimen/padding_small"
    android:paddingBottom="@dimen/padding_small"
    android:background="?selectableItemBackground">

    <TextView
        android:id="@+id/number_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintEnd_toStartOf="@id/status_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/order_number_placeholder" />

    <!--    <TextView-->
    <!--        android:id="@+id/description_text_view"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:textAppearance="?textAppearanceBody1"-->
    <!--        app:layout_constraintEnd_toStartOf="@id/status_text_view"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        tools:text="Одностворчатое окно" />-->

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintEnd_toStartOf="@id/status_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_text_view"
        tools:text="@string/ruble_placeholder" />

    <TextView
        android:id="@+id/status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintBottom_toBottomOf="@id/chevron"
        app:layout_constraintEnd_toStartOf="@id/chevron"
        app:layout_constraintTop_toTopOf="@id/chevron"
        tools:text="@string/created" />

    <ImageView
        android:id="@+id/chevron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_baseline_chevron_right_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>